@@ -166,6 +166,7 @@ include_directories(
 add_library(OrthancPython SHARED
   Sources/Autogenerated/sdk.cpp
   Sources/DicomScpCallbacks.cpp
+  Sources/ICallbackRegistration.cpp
   Sources/IncomingHttpRequestFilter.cpp
   Sources/OnChangeCallback.cpp
   Sources/OnStoredInstanceCallback.cpp
@@ -176,7 +177,7 @@ add_library(OrthancPython SHARED
   Sources/PythonObject.cpp
   Sources/PythonString.cpp
   Sources/RestCallbacks.cpp
-  Sources/ICallbackRegistration.cpp
+  Sources/StorageArea.cpp
 
   # Third-party sources
   ${CMAKE_SOURCE_DIR}/Resources/Orthanc/Plugins/OrthancPluginCppWrapper.cpp
