@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* New Python function: "orthanc.RegisterStorageArea()"
 * Custom exception "orthanc.OrthancException" is raised instead of "ValueError"
 
 
